fix zen-boz(padding)/name-dev+menuBtn(visible/hidden)/main list (position)/picture(display:bloc;position: absolut/project position grid-fb.css)

--- a/src/components/Header/Names/names.css
+++ b/src/components/Header/Names/names.css
@@ -27,12 +27,12 @@
     padding-right: 27px;
   }
 }
-@media (max-width: 768px){
+@media (max-width: 768px) and (orientation: portrait){
   .dev .name-dev{
     text-align: left;
   }
 }
-@media (max-width: 620px){
+@media (max-width: 620px) and (orientation: portrait){
   .name{
     flex-basis: 50%;
     padding-top: 20px;
@@ -40,7 +40,7 @@
     padding-right: 12px;
   }
 }
-@media (max-width: 420px){
+@media (max-width: 420px) and (orientation: portrait){
   .name h2{
     font-size: 1.27rem;
   }
